# sketch3d

./: Cargo.toml  README.md
report/: front_page.tex  notes.tex  report.bib  report.tex
src/: annotation.rs  cylinder.rs  cyllinder.rs  edit.rs  gui.rs  laplacian.rs  lineobjects.rs  main.rs  objects.rs  program.rs  settings.rs  shaders.rs  splinedraw.rs  utils.rs
src/shaders/: body.frag  line.frag  line.vert  screen_line.frag  simple.frag  simple.vert
