[package]
name = "modeling_rust"
version = "0.1.0"
authors = ["haakofl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.33.0"
gl = "0.10.0"
glm = "0.2.3"
num-traits = "*"
lazy_static = "1.4.0"
nalgebra = "0.19.0"
generic-array = "0.13.2"

[features]

default = ["sparse"]

sparse = ["nalgebra/sparse"]